...
  ) {
    LanguageSelector(
        selectedLanguage = sourceLang,
        recentLanguages = recentLanguages,
        onLanguageSelected = onSourceLanguageSelected,
        prependLanguages = listOf(autoDetectLanguage),
        modifier = Modifier.testTag("source_lang_selector"),
    )
    IconButton(
        onClick = {
          // If translation is shown, put target word in input, else clear
          val newSearchTerm =
              if (pageState is TranslateViewState.Translated) {
...
      )
    }
    LanguageSelector(
        selectedLanguage = targetLang,
        recentLanguages = recentLanguages,
        onLanguageSelected = onTargetLanguageSelected,
        modifier = Modifier.testTag("target_lang_selector"),
    )
  }
}

/**
 * Dropdown selector for a single language.
...
