...
          }
        }
      },
      keyboardOptions = KeyboardOptions(imeAction = ImeAction.Search),
      keyboardActions = KeyboardActions(onSearch = { onSearch() }),
      singleLine = true,
      modifier = Modifier.fillMaxWidth().testTag("search_box"))
}

