...
            sourceLang = sourceLang,
            targetLang = targetLang,
            showAvailableLanguages = false,
            isLoading = false,
            errorMessage = null,
            onClick = { viewModel.fetchTranslation(pageState, item, sourceLang, targetLang) },
            modifier = Modifier.testTag("search_result_item"),
        )
      }

      // Divider between sections
      if (translatedArticles.isNotEmpty() && untranslatedArticles.isNotEmpty()) {
        item { SectionDivider() }
...
