...
)

val supportedLanguages =
    listOf(
        SupportedLanguage(
            code = "en",
            name = "English",
            localName = "English",
            articleCount = 7210627,
            pageCount = 65922751,
            activeUserCount = 250013,
        ),
        SupportedLanguage(
...
            articleCount = 3136954,
            pageCount = 8586889,
            activeUserCount = 33080,
        ),
        SupportedLanguage(
            code = "fr",
            name = "French",
            localName = "français",
            articleCount = 2770056,
            pageCount = 14052409,
            activeUserCount = 33162,
        ),
        SupportedLanguage(
...
            articleCount = 2223344,
            pageCount = 4789644,
            activeUserCount = 7212,
        ),
        SupportedLanguage(
            code = "es",
            name = "Spanish",
            localName = "español",
            articleCount = 2126116,
            pageCount = 8684890,
            activeUserCount = 36160,
        ),
        SupportedLanguage(
...
            articleCount = 2896,
            pageCount = 6263,
            activeUserCount = 18,
        ),
        SupportedLanguage(
            code = "he",
            name = "Hebrew",
            localName = "עברית",
            articleCount = 401148,
            pageCount = 1673761,
            activeUserCount = 6893,
        ),
        SupportedLanguage(
...
